# microsandbox-rb

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Gemfile  README.md  Rakefile  microsandbox-rb.gemspec  microsandbox.gemspec  rust-toolchain.toml
.cargo/: config.toml.example
.claude/: settings.json
.claude/skills/release/: SKILL.md
.claude/skills/verify-local/: SKILL.md
.github/workflows/: ci.yml  release.yml
ext/microsandbox/: Cargo.toml  extconf.rb
ext/microsandbox/src/: agent.rs  backend.rs  conv.rs  error.rs  exec.rs  fs_stream.rs  image.rs  lib.rs  runtime.rs  sandbox.rs  snapshot.rs  ssh.rs  stream.rs  volume.rs
lib/: microsandbox.rb
lib/microsandbox/: agent.rb  errors.rb  exec_handle.rb  exec_output.rb  fs.rb  image.rb  log_entry.rb  metrics.rb  modification.rb  network.rb  patch.rb  sandbox.rb  snapshot.rb  ssh.rb  streams.rb  version.rb  volume.rb
sig/: microsandbox.rbs
spec/: spec_helper.rb
spec/integration/: agent_spec.rb  attach_spec.rb  lifecycle_spec.rb  modify_health_spec.rb  patches_network_spec.rb  roadmap_spec.rb  snapshot_spec.rb  ssh_spec.rb  streams_lifecycle_spec.rb
spec/unit/: agent_spec.rb  attach_spec.rb  backend_spec.rb  errors_spec.rb  modify_spec.rb  network_spec.rb  patch_spec.rb  relay_timeout_retry_spec.rb  roadmap_spec.rb  runtime_spec.rb  sandbox_spec.rb  snapshot_spec.rb  ssh_spec.rb  value_objects_spec.rb  version_spec.rb  volume_fs_spec.rb
